--- a/css/small.css
+++ b/css/small.css
@@ -158,6 +158,20 @@ footer p {
         text-decoration: none;
     }
 
+    .goal{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .goal p {
+        padding: 0.25em;
+        font-size: 1.2em;
+    }
+
+.weathercast {
+    margin-top: 3em;
+}
 .current {
     display: flex;
     justify-content: center;
@@ -211,6 +225,7 @@ footer p {
     .reference {
         font-size: .8em;
         text-align: right;
+        padding: 0 2%;
     }
 
     .reference a{
@@ -225,10 +240,51 @@ footer p {
         padding-bottom: 3em;
     }
 
+    .cckoga {
+        margin: 3em 0;
+    }
+
+    .eventitem {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 1em 0;
+    }
+
+    .eventitem h3 {
+        margin: 0 ;
+        padding: .5em;
+    }
+
+    .viewall {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cta2 {
+        text-decoration: none;
+        background: #FF9100;
+        color: white;
+        border:solid 2px #FF9100;
+        border-radius: 50px;
+        padding: .75em 3em;
+        margin: 1em;
+    }
+
+    .cta2:hover {
+    background: #031726;
+    color: white;
+    border: solid 2px #031726;
+    }
+
 .bannerads {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background: #f2eeea;
+    margin: 3em 0;
     }
 
     .bannerads img{
@@ -241,16 +297,6 @@ footer p {
         position: relative;
     }
 
-.overlay2 {
-    position: absolute;
-    top: 20%;
-    left: 20%;
-    background: rgba(255, 255, 255, 0.8);
-    max-width: 300px;
-    padding: 2em;
-    
-}
-
 .overlay2 p {
     font-size: 1em;
     line-height: 1.6;
@@ -258,22 +304,32 @@ footer p {
 
 .graph {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2em;
-    padding: 0 2em;
+    grid-template-columns: 10% 3fr;
+    margin: 0 2em;
     width: 100%;
 }
 
+.population {
+    margin: 2em;
+    display: flex;
+    flex-direction: column;
+}
     .y {
         grid-column: 1/2;
         display: flex;
         flex-direction: column-reverse;
         align-items: flex-end;
-        border-right: solid 1px #faf8f6;
+        border-right: solid 1px  #f2eeea;
     }
 
     .y span {
         margin: 2em;
+    }
+
+
+    .statics {
+        display: flex;
+        justify-content: space-evenly;
     }
 
     .statics1 {
@@ -299,42 +355,66 @@ footer p {
     
     .x {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 2em;
-        padding: 0 2em;
-        border-top: solid 1px #faf8f6;
+        grid-template-columns: 10% 3fr;
+        margin: 0 2em;
+        width: 100%;
+        border-top: solid 1px #f2eeea;
     }
 
     .x span {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 2em;
+        padding: 1em;
     }
 
+    .scale {
+        grid-column: 1/2;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: flex-end;
+    }
+
+    .timeline {
+        width: 100%;
+        grid-column: 2/3;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+
     .people1 {
-        background: #FFEDD6;
-        width: 100px; 
+        background: #ECF6FD;
+        width: 60px; 
         height: 130px;
     }
 
-    .people1 span {
-        margin: auto 0;
-    }
     .people2 {
-        background: #FFEDD6;
-        width: 100px; 
+        background:  #ECF6FD;
+        width: 60px; 
         height: 170px;
     }
 
     .people3 {
         background: #FFEDD6;
-        width: 100px; 
+        width: 60px; 
         height: 200px;
     }
 
 table {
         margin : 2em 0;
+        border-collapse: collapse;
+        border: solid 1px #FF9100;
+    }
+
+    td {
+        padding: .5em;
+        text-align: center;
+    }
+
+    tr:first-child td{
+        padding: .75em;
+        background: #FFEDD6;
     }
 
 .list {
